<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity1">

    <ImageView
        android:id="@+id/acct_img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_acc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:onClick="addImg"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Fname"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/acct_img"

        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"


            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:startIconDrawable="@drawable/ic_acc"
        app:startIconTint="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/Fname"
        android:layout_marginTop="25dp"


        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"


            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:startIconDrawable="@drawable/ic_age"
        app:startIconTint="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/Email"
        android:layout_marginTop="25dp"

        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"


            />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="380dp"
        android:layout_height="150dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/background_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age"
        app:layout_constraintVertical_bias="0.278">

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="15dp"

            />
        
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/gender"

            >

            <RadioButton 
                android:id="@+id/Homme"
                 android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/male"
                android:layout_marginStart="100dp"
                android:checked="true"
                />

            <RadioButton
                android:id="@+id/femme"
                android:layout_marginStart="25dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/female"/>
        </RadioGroup>

    </RelativeLayout>

    <Button
        android:id="@+id/textButton"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:text="Next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout1"
        android:layout_marginTop="20dp"
        android:onClick="next"
        />

</androidx.constraintlayout.widget.ConstraintLayout>